5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1582_1330.log
== TEST (2019-03-16 12:18:52) 
-- CODE:
print (250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 12:19:11) 
-- CODE:
print (250/6)
-- EXECUTION TIME:
0.190188
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:20:09) 
-- CODE:
print (250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:21:04) 
-- CODE:
print (250/6) round (x,n)
-- ERROR:
File "XXXX", line 1
    print (250/6) round (x,n)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:22:40) 
-- CODE:
print (round 250/6(x,n))
-- ERROR:
File "XXXX", line 1
    print (round 250/6(x,n))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:22:56) 
-- CODE:
print (round 250/6)
-- ERROR:
File "XXXX", line 1
    print (round 250/6)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:23:06) 
-- CODE:
(round 250/6)
-- ERROR:
File "XXXX", line 1
    (round 250/6)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:23:19) 
-- CODE:
round (250/6)
-- ERROR:
File "XXXX", line 1
    (round 250/6)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:26:15) 
-- CODE:
round (7,2)
-- ERROR:
File "XXXX", line 1
    (round 250/6)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:27:04) 
-- CODE:
print (250/6)
round (x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round (x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:28:13) 
-- CODE:
print (250/6)
round (41,66,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round (41,66,2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:28:22) 
-- CODE:
print (250/6)
round (41,66)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:29:19) 
-- CODE:
print (round(250/6))

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 12:29:29) 
-- CODE:
print (round(250/6))

-- EXECUTION TIME:
0.136472
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 12:30:18) 
-- CODE:
print (round(250/6,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 12:30:24) 
-- CODE:
print (round(250/6,2))

-- EXECUTION TIME:
0.158341
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
